# OpenUltraSAST

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.kiro/specs/harnessx-self-improving-rulesets/: blueprint-alignment.md  dependency-audit.md  design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/openrouter-sast-harness/: assessment.md  decisions.md  design.md  requirements.md  tasks.md
.opencode/skills/openultrasast-fix-audit/: SKILL.md
.opencode/skills/openultrasast-kiro-impl/: SKILL.md
.opencode/skills/openultrasast-scan/: SKILL.md
.opencode/skills/openultrasast-triage/: SKILL.md
benchmarks/fixtures/c-cpp-smoke/src/: vuln.cpp
benchmarks/fixtures/cpp-damn-vulnerable/src/: buffer.cpp  command.cpp  safe.cpp
benchmarks/fixtures/java-spring-boot-vulnerable/: NOTICE.md
benchmarks/fixtures/java-web-smoke/src/main/java/example/: VulnerableServlet.java
benchmarks/fixtures/javascript-node-web-smoke/src/: app.js
benchmarks/fixtures/javascript-vulnerable/src/: app.js  safe.js
benchmarks/fixtures/python-vulnerable/: app.py  safe.py
benchmarks/fixtures/python-web-smoke/: app.py
benchmarks/manifests/: c-cpp-smoke.toml  cpp-damn-vulnerable.toml  java-spring-boot-vulnerable.toml  java-web-smoke.toml  javascript-node-web-smoke.toml  javascript-vulnerable.toml  python-vulnerable.toml  python-web-smoke.toml
dagger/: ci.py
docs/: examples.md  threat-model.md
src/openultrasast/: __init__.py  benchmark.py  calibration.py  cli.py  config.py  findings.py  fusion.py  gate.py  harness.py  harness_ext.py  hunter.py  hunter_harness.py  index.py  mapping.py  mcp.py  preprocess.py  rank.py  redaction.py  reports.py  run.py  skills.py  slot_contract.py  stage_processors.py  vectorstore.py  verification.py  verify_judge.py
src/openultrasast/improve/: __init__.py  evolve.py  journal.py  validator.py
src/openultrasast/policy/: __init__.py  verycode.py
src/openultrasast/provider/: openrouter.py
src/openultrasast/ruleset/: __init__.py  store.py
src/openultrasast/ruleset/c/: rules.toml
src/openultrasast/ruleset/groovy/: rules.toml
src/openultrasast/ruleset/java/: rules.toml
src/openultrasast/ruleset/javascript/: rules.toml
src/openultrasast/ruleset/python/: rules.toml
src/openultrasast/scoring/: __init__.py  project_score.py
tests/: conftest.py  test_benchmark.py  test_calibration.py  test_cli_hx_dispatch.py  test_cli_improve.py  test_config.py  test_detection_benchmarks.py  test_findings.py  test_fusion.py  test_gate.py  test_hardening_pipeline.py  test_harness.py  test_harness_ext.py  test_hunter.py  test_hunter_harness.py  test_improve.py  test_index.py  test_mapping.py  test_mcp.py  test_opencode_skills.py  test_pipeline_calibration.py  test_policy.py  test_preprocess.py  test_provider_retry.py  test_rank.py  test_redaction.py  test_reports.py  test_ruleset.py  test_run.py  test_scan_pipeline_integrity.py  test_score_pipeline.py  test_scoring.py  test_skills.py  test_slot_contract.py  test_verification.py  test_verify_judge.py
tests/golden/: detection_baseline.json
